--- a/homepage/static/ngTemplates/app.homepage.enroll.html
+++ b/homepage/static/ngTemplates/app.homepage.enroll.html
@@ -406,202 +406,18 @@
     </div>
   </div>
 
-  <!-- <div class="container text-center">
-      <h1 style="padding-top: 2em;color:#ooo;"><b>New App Features</b></h1>
-      <span>LEARNING VIA APP NEVER GET EASIER</span>
-      <div class="row">
-        <div class=" col-md-4 ">
-          <div style="float:left;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;">
-            <img src='/static/images/24tut/apple.png' height='60px' style="position:absolute;top:20%;left:20%;" />
-          </div>
-          <div style="float:left;margin:1em 0 0 1em;">
-            <h4><b>Bookmark Fav Courses</b></h4>
-            <span style="margin-top:-10px;">Get the Clear Picture</span>
-          </div>
-        </div>
-        <div class="col-md-offset-4 col-md-4 ">
-          <div style="float:right;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;margin-left: 1em;">
-            <img src='/static/images/24tut/apple.png' height='60px' style="position:absolute;top:20%;left:20%;" />
-          </div>
-          <div style="float:right;margin-top:1em ">
-            <h4><b>App Access</b></h4>
-            <span style="margin-top:-10px;">Get the Clear Picture</span>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class=" col-md-4 " style="margin-top: 1em;">
-          <div style="float:left;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;">
-            <img src='/static/images/24tut/apple.png' height='60px' style="position:absolute;top:20%;left:20%;" />
-          </div>
-          <div style="float:left;margin:1em 0 0 1em;">
-            <h4><b>Video Demonstration</b></h4>
-            <span style="margin-top:-10px;">Get the Clear Picture</span>
-          </div>
-        </div>
-        <div class="col-md-offset-4 col-md-4 " style="margin-top: 1em;">
-          <div style="float:right;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;margin-left: 1em;">
-            <img src='/static/images/24tut/apple.png' height='60px' style="position:absolute;top:20%;left:20%;" />
-          </div>
-          <div style="float:right;margin-top:1em ">
-            <h4><b>Permanent Assets</b></h4>
-            <span style="margin-top:-10px;">Get the Clear Picture</span>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class=" col-md-4 " style="margin-top: 1em;">
-          <div style="float:left;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;">
-            <img src='/static/images/24tut/apple.png' height='60px' style="position:absolute;top:20%;left:20%;" />
-          </div>
-          <div style="float:left;margin:1em 0 0 1em;">
-            <h4><b>Live Chats</b></h4>
-            <span style="margin-top:-10px;">Get the Clear Picture</span>
-          </div>
-        </div>
-        <div class=" col-md-offset-4 col-md-4 " style="margin-top: 1em;">
-          <div style="float:right;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;margin-left: 1em;">
-            <img src='/static/images/24tut/apple.png' height='60px' style="position:absolute;top:20%;left:20%;" />
-          </div>
-          <div style="float:right;margin-top:1em ">
-            <h4><b>Book Quality</b></h4>
-            <span style="margin-top:-10px;">Get the Clear Picture</span>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class=" col-md-4 " style="margin-top: 1em;">
-          <div style="float:left;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;">
-            <img src='/static/images/24tut/apple.png' height='60px' style="position:absolute;top:20%;left:20%;" />
-          </div>
-          <div style="float:left;margin:1em 0 0 1em;">
-            <h4><b>Varied Syllabus</b></h4>
-            <span style="margin-top:-10px;">Get the Clear Picture</span>
-          </div>
-        </div>
-        <div class="col-md-offset-4 col-md-4 " style="margin-top: 1em;">
-          <div style="float:right;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;margin-left: 1em;">
-            <img src='/static/images/24tut/apple.png' height='60px' style="position:absolute;top:20%;left:20%;" />
-          </div>
-          <div style="float:right;margin-top:1em width:100px;">
-            <h4><b>Course for All Ages</b></h4>
-            <span style="margin-top:-10px;">Get the Clear Picture</span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container-fluid" style=" margin-top: 2em;padding: 0;">
-      <div class="row">
-        <div class="col-md-6" style="padding: 0;">
-          <img src="/static/images/24tut/tablechair.png" height='650px' width='800px' class="img-responsive" />
-        </div>
-        <div class="col-md-6" style="margin-top: 10em;">
-          <div class="col-md-5 text-center" style="padding: 0;border-bottom:1px solid #000;border-right:1px solid #000;padding-bottom: 1em;">
-            <img src='/static/images/24tut/apple.png' height='60px' />
-            <h4><b>1600+ Topics</b></h4>
-            <span>LEARN ANYTHING</span>
-          </div>
-          <div class=" col-md-5  text-center" style="padding: 0;border-bottom:1px solid #000;padding-bottom: 1em;">
-            <img src='/static/images/24tut/apple.png' height='60px' />
-            <h4><b>1900+ Students</b></h4>
-            <span>FUTURE GENIUS</span>
-          </div>
-          <div class="col-md-5 text-center" style="border-right:1px solid #000;padding-top: 1em;">
-            <img src='/static/images/24tut/apple.png' height='60px' />
-            <h4><b>15900+ Tests Taken</b></h4>
-            <span>THATS A LOT</span>
-          </div>
-          <div class="col-md-5 text-center" style="padding-top: 1em;">
-            <img src='/static/images/24tut/apple.png' height='60px' />
-            <h4><b>250+ Instructors</b></h4>
-            <span>ALL TRAINED PROFESSIONALS</span>
-          </div>
-        </div>
-      </div>
-    </div> -->
-  <!-- <div class="container-fluid no_padding" style="margin:20px auto;padding-bottom:5rem;">
-      <div class="row" style="margin:0px;">
-        <div class="col-md-12 no_padding" style="min-height:70vh;position:relative;">
-          <div class="col-md-12">
-            <div class="list_div row">
-              <div class="list_container">
-                <div class="list_head col-md-12">
-                  <span class="heading_medium">We Create The Best Environment To Learn</span>
-                </div>
-                <div class="col-md-10">
-                  <div class="list row" id="drop0" data-toggle="collapse" ng-click="drop(0)" data-target="#col0">
-                    <div class="col-md-10">
-                      <h4> 01. Great Online Instructors</h4>
-                    </div>
-                    <div class="col-md-2">
-                      <i class="fa fa-plus" aria-hidden="true"></i>
-                    </div>
-                  </div>
-
-                  <div id="col0" class=" list_body collapse">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</span>
-                  </div>
-                  <div class="list row" id="drop1" data-toggle="collapse" ng-click="drop(1)" data-target="#col1">
-                    <div class="col-md-10">
-                      <h4> 02. Get Learny Certified Awards</h4>
-                    </div>
-                    <div class="col-md-2">
-                      <i class="fa fa-plus" aria-hidden="true"></i>
-                    </div>
-                  </div>
-
-                  <div id="col1" class="list_body collapse">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</span>
-                  </div>
-
-                  <div class="list row" id="drop2" data-toggle="collapse" ng-click="drop(2)" data-target="#col2">
-                    <div class="col-md-10">
-                      <h4> 03.Exclusive Course Materials</h4>
-                    </div>
-                    <div class="col-md-2">
-                      <i class="fa fa-plus" aria-hidden="true"></i>
-                    </div>
-                  </div>
-                  <div id="col2" class="list_body collapse">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</span>
-                  </div>
-
-                  <div class="list row" id="drop3" data-toggle="collapse" ng-click="drop(3)" data-target="#col3">
-                    <div class="col-md-10">
-                      <h4> 04. In - depth Course Analysis</h4>
-                    </div>
-                    <div class="col-md-2">
-                      <i class="fa fa-plus" aria-hidden="true" style=""></i>
-                    </div>
-                  </div>
-                  <div id="col3" class="list_body collapse">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
   <div class="container text-center ">
     <h1 style="padding-top: 2em;color:#ooo;"><b>New App Features</b></h1>
     <span>LEARNING VIA APP NEVER GET EASIER</span>
     <div class="row" style="margin: 2em 0;">
-      <div class="col-md-4">
+      <div class="col-md-4 col-xs-12">
         <div class="flex-container text-left" style="float:left;">
           <div class="flex-item">
             <div style="float:left;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;">
               <img src='/static/images/24tut/graduate.png' height='60px' style="position:absolute;top:20%;left:20%;" />
             </div>
             <div style="float:left;margin:1em 0 0 1em;">
-              <h4><b>Bookmark Fav Courses</b></h4>
+              <h4><b>Bookmark Courses</b></h4>
               <span style="margin-top:-10px;">Get the Clear Picture</span>
             </div>
           </div>
@@ -634,45 +450,45 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="text-center" style="float:left;">
-          <img src="/static/images/24tut/iphone.png" width='350px' height='400px' />
+      <div class="col-md-4 imghide">
+        <div class="text-left" style="float:left;">
+          <img src="/static/images/24tut/iphone.png" width='380px' height='480px' />
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="flex-container text-right" style="float:left;">
+      <div class="col-md-4 col-xs-12">
+        <div class="flex-container container-align">
           <div class="flex-item">
-            <div style="float:right;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;margin-left: 1em;">
+            <div class='alignment' style="border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;">
               <img src='/static/images/24tut/graduate.png' height='60px' style="position:absolute;top:20%;left:20%;" />
             </div>
-            <div style="float:right;margin-top:1em ">
+            <div class='alignment' style="margin-top:1em;margin-left: 1em; ">
               <h4><b>App Access</b></h4>
               <span style="margin-top:-10px;">Get the Clear Picture</span>
             </div>
           </div>
           <div class="flex-item">
-            <div style="float:right;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;margin-left: 1em;">
+            <div class='alignment' style="border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;">
               <img src='/static/images/24tut/mon.png' height='60px' style="position:absolute;top:20%;left:20%;" />
             </div>
-            <div style="float:right;margin-top:1em ">
+            <div class='alignment' style="margin-top:1em;margin-left: 1em; ">
               <h4><b>Permananent Assets</b></h4>
               <span style="margin-top:-10px;">Get the Clear Picture</span>
             </div>
           </div>
           <div class="flex-item">
-            <div style="float:right;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;margin-left: 1em;">
+            <div class='alignment' style="border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;">
               <img src='/static/images/24tut/note.png' height='60px' style="position:absolute;top:20%;left:20%;" />
             </div>
-            <div style="float:right;margin-top:1em ">
+            <div class='alignment' style="margin-top:1em;margin-left: 1em; ">
               <h4><b>Book Quality</b></h4>
               <span style="margin-top:-10px;">Get the Clear Picture</span>
             </div>
           </div>
           <div class="flex-item">
-            <div style="float:right;border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;margin-left: 1em;">
+            <div class='alignment' style="border:1px solid #000;border-radius: 50px;height:100px;width:100px;position: relative;">
               <img src='/static/images/24tut/apple.png' height='60px' style="position:absolute;top:20%;left:20%;" />
             </div>
-            <div style="float:right;margin-top:1em ">
+            <div class='alignment' style="margin-top:1em;margin-left: 1em;">
               <h4><b>Course for All Ages</b></h4>
               <span style="margin-top:-10px;">Get the Clear Picture</span>
             </div>
@@ -680,6 +496,40 @@
         </div>
       </div>
 
+    </div>
+  </div>
+
+  <div class="container-fluid" style=" margin-top: 2em;padding: 0;background-color: #5365D1;color:white;">
+    <div class="row" style="margin:0;">
+      <div class="col-md-6" style="padding: 0;margin: 4em 0 0 0;">
+        <img src="/static/images/24tut/tablechair.png" height='650px' width='700px' class="img-responsive" />
+      </div>
+      <div class="col-md-6" style="margin-top: 12em;">
+        <div class="row text-right">
+          <div class="col-md-4 text-center" style="padding: 0;border-bottom:1px solid #fff;border-right:1px solid #fff;padding-bottom: 1em;">
+            <img src='/static/images/24tut/apple.png' height='60px' />
+            <h4><b>1600+ Topics</b></h4>
+            <span>LEARN ANYTHING</span>
+          </div>
+          <div class=" col-md-4  text-center" style="padding: 0;border-bottom:1px solid #fff;padding-bottom: 1em;">
+            <img src='/static/images/24tut/apple.png' height='60px' />
+            <h4><b>1900+ Students</b></h4>
+            <span>FUTURE GENIUS</span>
+          </div>
+        </div>
+        <div class="row text-right">
+          <div class="col-md-4 text-center" style="border-right:1px solid #fff;padding-top: 1em;">
+            <img src='/static/images/24tut/apple.png' height='60px' />
+            <h4><b>14900+ Tests Taken</b></h4>
+            <span>THATS A LOT</span>
+          </div>
+          <div class="col-md-4 text-center" style="padding-top: 1em;">
+            <img src='/static/images/24tut/apple.png' height='60px' />
+            <h4><b>250+ Instructors</b></h4>
+            <span>ALL TRAINED PROFESSIONALS</span>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
