--- a/support/static/ngTemplates/app.report.html
+++ b/support/static/ngTemplates/app.report.html
@@ -1,109 +1,17 @@
 <div class="shaddowed card bg-white" style="min-height:93.7vh;">
   <breadcrumb></breadcrumb>
-
   <div class="row" style="margin:5px 20px 0 20px;">
-    <div class="row" style="margin-top:20px;">
-      <div class="col-md-10 col-md-offset-1">
-        <div class="container-fluid" style="margin-top:15px;" ng-repeat="m in materialIssue">
-          <div class="card" style="padding:10px;" >
-            <div class="row container-fluid" ng-click="toggleMaterial(m.pk,$index)" style="cursor:pointer;height:5vh;padding:10px">
-              <div class="col-md-12 text-left">
-
-                <div class="col-md-3">
-                  <span style="font-size:12px"><strong>Project Title :
-                  </strong>{{m.productTittle}} </span>
-                </div>
-
-                <div class="col-md-3">
-                  <span style="font-size:12px"><strong>Comm_nr :
-                  </strong>{{m.projectComm}} </span>
-                </div>
-
-                <div class="col-md-3">
-                  <span style="font-size:12px"><strong>Total :
-                  </strong>{{(m.totalprice).toFixed(2)}} </span>
-                </div>
-                <!-- <div class="col-md-3">
-                  <span style="font-size:12px"><strong> Enginner:
-                    </strong> {{m.user.first_name}}</span>
-                </div> -->
-
-
-                <!-- <div class="col-md-2">
-                  <span style="font-size:12px"><strong> Total:
-                    </strong>{{sum[$index].toFixed(2)}}</span>
-                </div> -->
-
-                  <!-- <span><a  class="btn btn-primary "
-style="cursor:pointer;" target="_blank" href="">Material Issue<i
-class="fa fa-download"
-style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span> -->
-
-            <!-- <div class="col-md-2" >
-                  <span><a class="btn btn-primary" style="cursor:pointer;" target="_blank" href="/api/support/materialIssued/?value={{m.pk}}">Material Isuue <i class="fa fa-download"  ng-click="$event.stopPropagation();"></i></a></span>
-                </div> -->
-                <!-- <div class="col-md-1">
-                  <button type="button" class="btn btn-danger btn-sm" ng-click="$event.stopPropagation();" mwl-confirm title="Delete" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="delete(m.pk,$index);"
-                    confirm-button-type="default" cancel-button-type="default"> <i class="fa fa-trash"></i> </button>
-                  </div> -->
-              </div>
-            </div>
-            <div class="row container-fluid" ng-if="m.open">
-              <div class="container-fluid">
-                <hr>
-              </div>
-              <!-- <div class="col-md-4">
-                <div class="row">
-                  <div class="col-md-4">
-                    <span style="font-size:14px"><strong> Comm nr:
-                      </strong></span><br /><br />
-                    <span style="font-size:14px"><strong> Customer:
-                      </strong></span><br /><br />
-                    <span style="font-size:14px"><strong> Date of issue:
-                      </strong></span><br />
-                  </div>
-                  <div class="col-md-8">
-                    <span style="font-size:14px">{{m.project.comm_nr}}</span><br /><br />
-                    <span style="font-size:14px">{{m.user.first_name}}</span><br /><br />
-                    <span style="font-size:14px">{{m.created | date : "dd.MM.y"}} </span><br />
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-8">
-                <table class="table table-striped" style="margin-top:20px;">
-                  <th class="text-center">
-                    Part No
-                  </th>
-                  <th class="text-center">
-                    Quantity
-                  </th>
-                  <th class="text-center">
-                    Stock value/unit
-                  </th>
-                  <th class="text-center">
-                    Stock value Consumed
-                  </th>
-                  <tr ng-repeat="f in m.materialIssue" >
-                    <td class="text-center">
-                      <span>{{f.product.part_no}}</span>
-                    </td>
-                    <td class="text-center">
-                      <span>{{f.qty}}</span>
-                    </td>
-                    <td class="text-center">
-                      <span>{{f.price.toFixed(2)}}</span>
-                    </td>
-                    <td class="text-center">
-                      <span ng-init="itemTotal = (f.price * f.qty).toFixed(2);">{{itemTotal}}</span>
-                    </td>
-                  </tr>
-                </table>
-              </div>
-
-            </div> -->
-          </div>
-        </div>
-      </div>
-    </div>
+    <table class="table table-striped" style="width:100%">
+      <tr>
+        <th>Project Title</th>
+        <th>Comm_nr</th>
+        <th>Total</th>
+      </tr>
+      <tr ng-repeat="m in materialIssue">
+        <td> {{m.projectTittle}}</td>
+        <td> {{m.projectComm}}</td>
+        <td> {{m.totalprice}}</td>
+      </tr>
+    </table>
   </div>
 </div>
