fixed mobile view homepage

--- a/homepage/static/ngTemplates/app.homepage.about.html
+++ b/homepage/static/ngTemplates/app.homepage.about.html
@@ -1,4 +1,5 @@
-<div class="container-fluid no_padding" style="min-height:60vh;margin:20px auto;background-image:linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)),url('static/images/24tut/diss.jpg');background-size:100%;background-repeat:no-repeat;">
+
+<div class="container-fluid no_padding about_head"style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('static/images/24tut/diss.jpg');">
   <div class="col-md-12" style="padding-top:20%;padding-left:8%;">
     <span style="color:#fff;font-size:4em;font-weight:bolder;">About</span><br>
     <span class="u_line"></span>
@@ -42,13 +43,13 @@
     </div>
   </div>
 </div>
-<div class="container-fluid no_padding" style="min-height:60vh;background-image:linear-gradient(rgba(36, 32, 32, 0.89), rgba(32, 32, 32, 0.84)),url('static/images/24tut/meeting.png');background-size:100%;">
+<div class="container-fluid no_padding cent_div"style="background-image: linear-gradient(rgba(36, 32, 32, 0.89), rgba(32, 32, 32, 0.84)), url('static/images/24tut/meeting.png');">
   <div class="col-md-12 text-center" style="padding-top:10rem;">
     <h1 class="heading_big" style="color:#fff;">Our Process</h1>
     <h5 class="heading_small" style="color:#fff;">SIMPLE & EFFICIENT</h5>
   </div>
   <div class="container-fluid">
-    <div class="container">
+    <div class="container dash_container">
       <div class="dash cent">
         <img src="/static/images/24tut/ibulb.png" class="pro_img" width="40%">
         <img src="/static/images/24tut/idea.png" class="pro_over_img" width="40%">
