--- a/homepage/static/ngTemplates/app.homepage.enroll.html
+++ b/homepage/static/ngTemplates/app.homepage.enroll.html
@@ -504,26 +504,26 @@
       <div class="col-md-6" style="padding: 0;margin: 4em 0 0 0;">
         <img src="/static/images/24tut/tablechair.png" height='650px' width='700px' class="img-responsive" />
       </div>
-      <div class="col-md-6" style="margin-top: 12em;">
+      <div class="col-md-6" style="margin-top: 12em;margin-bottom:2em;">
         <div class="row text-right">
-          <div class="col-md-4 text-center" style="padding: 0;border-bottom:1px solid #fff;border-right:1px solid #fff;padding-bottom: 1em;">
+          <div class="col-md-4 text-center col-xs-6 col-sm-6" style="padding: 0;border-bottom:1px solid #fff;border-right:1px solid #fff;padding-bottom: 1em;">
             <img src='/static/images/24tut/apple.png' height='60px' />
             <h4><b>1600+ Topics</b></h4>
             <span>LEARN ANYTHING</span>
           </div>
-          <div class=" col-md-4  text-center" style="padding: 0;border-bottom:1px solid #fff;padding-bottom: 1em;">
+          <div class=" col-md-4  text-center col-xs-6 col-sm-6" style="padding: 0;border-bottom:1px solid #fff;padding-bottom: 1em;">
             <img src='/static/images/24tut/apple.png' height='60px' />
             <h4><b>1900+ Students</b></h4>
             <span>FUTURE GENIUS</span>
           </div>
         </div>
         <div class="row text-right">
-          <div class="col-md-4 text-center" style="border-right:1px solid #fff;padding-top: 1em;">
+          <div class="col-md-4 text-center col-xs-6 col-sm-6" style="border-right:1px solid #fff;padding-top: 1em;">
             <img src='/static/images/24tut/apple.png' height='60px' />
             <h4><b>14900+ Tests Taken</b></h4>
             <span>THATS A LOT</span>
           </div>
-          <div class="col-md-4 text-center" style="padding-top: 1em;">
+          <div class="col-md-4 text-center col-xs-6 col-sm-6" style="padding-top: 1em;">
             <img src='/static/images/24tut/apple.png' height='60px' />
             <h4><b>250+ Instructors</b></h4>
             <span>ALL TRAINED PROFESSIONALS</span>
