--- a/ecommerce/static/ngTemplates/app.ecommerce.account.default.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.default.html
@@ -11,17 +11,17 @@
       </div>
     </div>
     <div class="form-group">
-      <div class="col-xs-6" style="padding:0 5px 0 0">
+      <div class="col-xs-6" style="padding:15px 5px 0 0">
         <label for="" style="margin:0px"><strong>Email Id</strong></label>
         <input ng-model="detailsForm.email" type="text" class="form-control" id="" placeholder="Enter Email" ng-disabled="!editMode">
       </div>
-      <div class="col-xs-6" style="padding:0 0 0 5px">
+      <div class="col-xs-6" style="padding:15px 0 0 5px">
         <label for="" style="margin:0px"><strong>Phone No.</strong></label>
         <input ng-model="detailsForm.mobile" type="text" class="form-control" id="" placeholder="Mobile No" ng-disabled="!editMode">
       </div>
     </div>
     <div class="form-group">
-      <div class="col-xs-12" style="padding:0 5px 0 0">
+      <div class="col-xs-12" style="padding:15px 5px 0 0">
         <label for="" style="margin:0px"><strong>GST</strong></label>
         <input ng-model="detailsForm.gst" type="text" class="form-control" id="" placeholder="Enter GST" ng-disabled="!editMode">
       </div>
