--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -1735,5 +1735,11 @@
               </div>
             </div>
         </div>
+        <div class="row">
+          <div class="col-md-12 text-left">
+            <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="archieve()"
+              confirm-button-type="default" cancel-button-type="default" > Archieve </button>
+          </div>
+        </div>
     </div>
   </div>
