--- a/homepage/static/ngTemplates/app.homepage.about.html
+++ b/homepage/static/ngTemplates/app.homepage.about.html
@@ -83,7 +83,7 @@
         <div class="pro_title text-center">
           <span class="pro_num">04</span> <span class="pro_head" style="color:#fff">Score</span>
           <img src="/static/images/24tut/clip.png" class="pro_hov">
-          <span class="pro_descrp">the number of points, goals, runs, etc. achieved in a game or by a team or an individual.</span>
+          <span class="pro_descrp">the number of points, goals, runs achieved in a game by a team or an individual.</span>
         </div>
       </div>
       <div class="dashlast cent centlast">
