--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -71,13 +71,14 @@ style="padding:10px;">
    </div> -->
 
   <div class="row" style="margin-top:20px;" ng-if="!modeToggle">
-    <div class="col-md-6 " style="padding-left:30px">
+    <div class="col-md-8 " style="padding-left:30px">
       <div class="btn-group">
         <span><a class="btn btn-primary" target="_blank" href="/api/support/downloadStockReport/"> Download Stock Summary </a></span>
        <span><a class="btn btn-primary" target="_blank" href="/api/support/projectStockConsumption/"> Product Stock Consumed </a></span>
+       <span><a class="btn btn-primary" target="_blank" href="/api/support/downloadInvoiceReport/"> Invoice BOE </a></span>
       </div>
     </div>
-    <div class="col-md-6  text-right" style="padding-right:30px;">
+    <div class="col-md-4  text-right" style="padding-right:30px;">
       <h2 style="margin:0px"> Total : {{total.toFixed(2)}} </h2>
     </div>
     <div class="col-md-12">
