--- a/ecommerce/static/ngTemplates/app.ecommerce.account.cart.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.cart.item.html
@@ -1,16 +1,21 @@
 <div class="col-md-3 col-sm-6 col-xs-12 " style="padding-bottom:30px;" ng-controller = "ecommerce.account.cart.item">
   <div class="container-fluid card  bg-white" style="padding-bottom:0px;">
-    <div class="row" style="overflow:hidden;">
+    <div class="row" style="overflow:hidden;height:34vh;">
       <img style="width: 100%;" class="img" ng-src="{{data.product.files[0].attachment}}" >
     </div>
     <div class="row" >
       <div class="" style="padding-bottom:0px;">
         <div class="row container-fluid" style="padding:10px 20px; height:100px;">
-          <h5 style="margin:0px;  height:50px;">{{data.product.product.name}} <span ng-if="data.prod_howMuch!=null">
+          <h6 style="margin:0px;  height:50px;">
+
+            <span ng-if="data.product.product.name.length<=24">{{data.product.product.name}}</span>
+            <span ng-if="data.product.product.name.length>24">{{data.product.product.name.slice(0,24)}}..</span>
+
+             <span ng-if="data.prod_howMuch!=null">
             <span ng-if="data.product.product.unit!='Size and Color'&&data.product.product.unit!='Size'">{{data.prod_howMuch | convertUnit: data.product.product.unit}}</span>
             <span ng-if="data.product.product.unit=='Size and Color'||data.product.product.unit=='Size'">{{data.prod_howMuch | convertSize: data.product.product.unit}}
             {{data.desc}} </span>
-            </span> </h5>
+          </span> </h6>
           <span style="font-size:15px;" > Price : </span>
           <span ng-if="data.prodSku==data.product.product.serialNo"  style="font-size:15px;padding-left:10px">
             <i class="fa {{currency}}"></i>{{data.product.product.discountedPrice.toFixed(2)}}
