--- a/ecommerce/static/ngTemplates/app.ecommerce.orders.cancelModalWindow.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.orders.cancelModalWindow.html
@@ -27,12 +27,12 @@
         {{i.qty}}
       </div>
       <div class="col-md-3 col-xs-3">
-        <i class="fa fa-inr"></i> {{i.ppAfterDiscount.toFixed(2) * i.qty}}
+        <i class="fa {{currency}}"></i> {{i.paidAmount.toFixed(2) }}
       </div>
     </div>
     <hr>
     <div class="row container-fluid">
-      <span> Amount to be Refunded : <i class="fa fa-inr"></i> {{amtToBeRefunded}}  </span>
+      <span> Amount to be Refunded : <i class="fa {{currency}}"></i> {{amtToBeRefunded}}  </span>
     </div>
     <div class="row container-fluid text-center">
       <button type="button" class="btn btn-primary" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="state=='cancel' ? cancel() : return()" confirm-button-type="default" cancel-button-type="default">{{state}}</button>
