--- a/ecommerce/static/ngTemplates/app.ecommerce.account.default.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.default.html
@@ -20,7 +20,7 @@
         <input ng-model="detailsForm.mobile" type="text" class="form-control" id="" placeholder="Mobile No" ng-disabled="!editMode">
       </div>
     </div>
-    <div class="form-group">
+    <div ng-if="isGst" class="form-group">
       <div class="col-xs-12" style="padding:15px 5px 0 0">
         <label for="" style="margin:0px"><strong>GST</strong></label>
         <input ng-model="detailsForm.gst" type="text" class="form-control" id="" placeholder="Enter GST" ng-disabled="!editMode">
