--- a/ecommerce/static/ngTemplates/app.ecommerce.account.orders.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.orders.item.html
@@ -33,7 +33,7 @@
     <div class="col-xs-8 col-sm-8 hidden-md hidden-lg">
       <div class="row">
         <div class="col-xs-12 col-sm-3 hidden-md hidden-lg">
-          <span style="font-size:10px;"> Total Amount : <i class="fa {{currency}}"></i> {{data.totalAmount}} </span>
+          <span style="font-size:10px;"> Total Amount : <i class="fa {{currency}}"></i> {{data.totalAmount}}</span>
         </div>
         <div class="col-xs-12 col-sm-3 hidden-md hidden-lg">
           <span style="font-size:10px;"> Payment Mode : {{data.paymentMode}} </span>
@@ -95,7 +95,7 @@
             <strong>Qty </strong>
           </div>
           <div ng-if="!isStoreGlobal" class="col-md-2 col-sm-2  hidden-xs">
-            <strong>Price</strong>
+            <strong>Price  <span class="text-muted"> (+ GST)</span> </strong>
           </div>
           <div class="col-md-2 col-sm-2  hidden-xs">
             <strong>Total</strong>
@@ -124,10 +124,10 @@
             {{i.qty}}
           </div>
           <div ng-if="!isStoreGlobal" class="col-md-2 col-sm-2 ">
-            <i class="fa {{currency}}"></i> {{(i.ppAfterDiscount * i.qty).toFixed(2)}} <span class="text-muted"> + {{i.gstAmount }}</span>
+            <i class="fa {{currency}}"></i> {{(i.ppAfterDiscount * i.qty).toFixed(2)}} <span class="text-muted"> + {{(i.gstAmount).toFixed(2)}}</span>
           </div>
           <div class="col-md-2 col-sm-2 ">
-            <i class="fa {{currency}}"></i> {{(i.totalAmount * i.qty).toFixed(2)}}
+            <i class="fa {{currency}}"></i> {{(i.totalAmount).toFixed(2)}}
           </div>
           <div class="col-md-2 col-sm-2 hidden-xs">
             {{i.status}}
