--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -28,14 +28,41 @@
       <div class="container-fluid">
         <div class="input-group">
           <input type='text' ng-model='searchmaterial.search' class="form-control" placeholder="Search a Project " ng-enter="enterFunmaterial()" style="height:40px" />
+          <!-- <div class="form-group">
+            <label>As On</label>
+            <div class="input-group">
+              <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="searchmaterial.dt" is-open="status.opened" ng-change="enterFunmaterial()"/>
+              <span class="input-group-btn">
+              <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </div>
+          </div> -->
           <span class="input-group-addon" ng-click="refreshmaterial()" style="cursor:pointer; background-color:#fff;"><i class="fa fa-refresh"></i></span>
-          <span class="input-group-addon" ng-click="prevmaterial()" style="cursor:{{offsetmaterial!=0?'pointer;background-color:#fff;':'not-allowed;background-color:#eee'}}"><i class="fa fa-arrow-left"></i>Prev</span>
-          <span class="input-group-addon" ng-click="nextmaterial()" style="cursor:pointer; background-color:#fff;">Next <i class="fa fa-arrow-right"></i></span>
+          <span class="input-group-addon" ng-if="showPagint" ng-click="prevmaterial()" style="cursor:{{offsetmaterial!=0?'pointer;background-color:#fff;':'not-allowed;background-color:#eee'}}"><i class="fa fa-arrow-left"></i>Prev</span>
+          <span class="input-group-addon" ng-if="showPagint" ng-click="nextmaterial()" style="cursor:pointer; background-color:#fff;">Next <i class="fa fa-arrow-right"></i></span>
         </div>
+
       </div>
 
     </div>
   </div>
+    <div class="row"  ng-if="modeToggle">
+      <div class="col-md-4 col-md-offset-4" style="margin-top:25px">
+
+      <div class="form-group">
+        <!-- <label>As On</label> -->
+        <div class="input-group">
+          <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="searchmaterial.dt" is-open="status.opened" ng-change="enterFunmaterial()"/>
+          <span class="input-group-btn">
+          <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+        </div>
+      </div>
+        </div>
+          <div class="col-md-1">
+            <h3 style="margin-top:25px">{{totSum.toFixed(2)}}</h3>
+          </div>
+    </div>
   <!-- <div class="row">
      <div class="col-md-10 col-md-offset-1 " ng-repeat=" p in products" >
        <div class="row card" ng-click="toggle(p.productPk,$index)"
