--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -1510,6 +1510,12 @@
                       <span ><a class="btn btn-primary" target="_blank" href="/api/support/quotation/?project={{form.pk}}&exRate={{form.exRate}}&typ=INR" style="min-width:50px"><i class="fa fa-download"></i>
                           Download Quotation In INR </a> </span>
                     </div>
+                  </div><br>
+                  <div class="row" ng-if="form.quoteRefNumber.length>0||form.projects.length>0||form.data.length>0">
+                    <div class="col-md-12 text-center">
+                      <span ><a class="btn btn-primary" target="_blank" href="/api/support/quotation/?project={{form.pk}}&exRate={{form.exRate}}&typ=Invoice" style="min-width:50px"><i class="fa fa-download"></i>
+                          Download Invoice </a> </span>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col-md-12 text-center" style="padding-top:20px">
