--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -100,6 +100,7 @@ style="padding:10px;">
   <div class="row" style="margin-top:20px;" ng-if="!modeToggle">
     <div class="col-md-8 " style="padding-left:30px">
       <div class="btn-group">
+        <span><button class="btn btn-primary" ng-click="createReportData()"> Create Stock Summary </button></span>
         <span><a class="btn btn-primary" target="_blank" href="/api/support/downloadStockReport/"> Download Stock Summary </a></span>
        <span><a class="btn btn-primary" target="_blank" href="/api/support/projectStockConsumption/"> Product Stock Consumed </a></span>
        <span><a class="btn btn-primary" target="_blank" href="/api/support/downloadInvoiceReport/"> Invoice BOE </a></span>
