--- a/homepage/static/ngTemplates/app.homepage.students.html
+++ b/homepage/static/ngTemplates/app.homepage.students.html
@@ -182,7 +182,7 @@
 
 
 
-  <div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('static/images/24tut/diss.jpg');margin:0">
+  <!-- <div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('static/images/24tut/diss.jpg');margin:0">
     <div class="container">
       <div class="col-md-12 text-center" style="margin-top:4em;">
         <span style="color:#fff;font-size:3em;font-weight:bolder;position: relative">Students are Benefited through these Values</span><br>
@@ -197,6 +197,14 @@
       </div>
     </div>
 
+  </div> -->
+
+  <div class="container-fluid">
+    <div class="container" style="margin-top:2em">
+      <div class="col-md-4">
+        <span><b>eLearny</b>has changed my life.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+      </div>
+    </div>
   </div>
 
 
